--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,66 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{STAMMNITZ2018607,
+title = {The Origins and Vulnerabilities of Two Transmissible Cancers in Tasmanian Devils},
+journal = {Cancer Cell},
+volume = {33},
+number = {4},
+pages = {607-619.e15},
+year = {2018},
+issn = {1535-6108},
+doi = {https://doi.org/10.1016/j.ccell.2018.03.013},
+url = {https://www.sciencedirect.com/science/article/pii/S153561081830117X},
+author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dane Hayes and Beiyuan Fu and Jinhong Wang and Daniel E. Martin-Herranz and Ludmil B. Alexandrov and Adrian Baez-Ortega and Syd Barthorpe and Alexandra Beck and Francesca Giordano and Graeme W. Knowles and Young Mi Kwon and George Hall and Stacey Price and Ruth J. Pye and Jose M.C. Tubio and Hannah V.T. Siddle and Sukhwinder Singh Sohal and Gregory M. Woods and Ultan McDermott and Fengtang Yang and Mathew J. Garnett and Zemin Ning and Elizabeth P. Murchison}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{ye2016structural,
+  title={Structural variation detection from next generation sequencing},
+  author={Ye, K and Hall, George and Ning, Z},
+  journal={Next Generat Sequenc \& Applic},
+  volume={1},
+  number={007},
+  year={2016}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@inproceedings{hall2019impact,
+  title={On the impact of the cutoff time on the performance of algorithm configurators},
+  author={Hall, George T and Oliveto, Pietro S and Sudholt, Dirk},
+  booktitle={Proceedings of the Genetic and Evolutionary Computation Conference},
+  pages={907--915},
+  year={2019}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{hall2020analysis,
+  title={Analysis of the performance of algorithm configurators for search heuristics with global mutation operators},
+  author={Hall, George T and Oliveto, Pietro S and Sudholt, Dirk},
+  booktitle={Proceedings of the 2020 Genetic and Evolutionary Computation Conference},
+  pages={823--831},
+  year={2020}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{hall2020fast,
+  title={Fast perturbative algorithm configurators},
+  author={Hall, George T and Oliveto, Pietro S and Sudholt, Dirk},
+  booktitle={International Conference on Parallel Problem Solving from Nature},
+  pages={19--32},
+  year={2020},
+  organization={Springer}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{hall2022impact,
+  title={On the impact of the performance metric on efficient algorithm configuration},
+  author={Hall, George T and Oliveto, Pietro S and Sudholt, Dirk},
+  journal={Artificial Intelligence},
+  volume={303},
+  pages={103629},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@phdthesis{hall2021framework,
+  title={A Framework for the Runtime Analysis of Algorithm Configurators},
+  author={Hall, George},
+  year={2021},
+  school={University of Sheffield}
 }
