--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -60,7 +60,18 @@ author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dan
 
 @phdthesis{hall2021framework,
   title={A Framework for the Runtime Analysis of Algorithm Configurators},
-  author={Hall, George},
+  author={Hall, George T},
   year={2021},
   school={University of Sheffield}
+}
+
+@article{jayarajan2023short,
+  title={Short-Term Treatment with Rho-Associated Kinase Inhibitor Preserves Keratinocyte Stem Cell Characteristics In Vitro},
+  author={Jayarajan, Vignesh and Hall, George T and Xenakis, Theodoros and Bulstrode, Neil and Moulding, Dale and Castellano, Sergi and Di, Wei-Li},
+  journal={Cells},
+  volume={12},
+  number={3},
+  pages={346},
+  year={2023},
+  publisher={MDPI}
 }
