--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,9 @@ year = {2018},
 issn = {1535-6108},
 doi = {https://doi.org/10.1016/j.ccell.2018.03.013},
 url = {https://www.sciencedirect.com/science/article/pii/S153561081830117X},
-author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dane Hayes and Beiyuan Fu and Jinhong Wang and Daniel E. Martin-Herranz and Ludmil B. Alexandrov and Adrian Baez-Ortega and Syd Barthorpe and Alexandra Beck and Francesca Giordano and Graeme W. Knowles and Young Mi Kwon and George Hall and Stacey Price and Ruth J. Pye and Jose M.C. Tubio and Hannah V.T. Siddle and Sukhwinder Singh Sohal and Gregory M. Woods and Ultan McDermott and Fengtang Yang and Mathew J. Garnett and Zemin Ning and Elizabeth P. Murchison}
+author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dane Hayes and Beiyuan Fu and Jinhong Wang and Daniel E. Martin-Herranz and Ludmil B. Alexandrov and Adrian Baez-Ortega and Syd Barthorpe and Alexandra Beck and Francesca Giordano and Graeme W. Knowles and Young Mi Kwon and George Hall and Stacey Price and Ruth J. Pye and Jose M.C. Tubio and Hannah V.T. Siddle and Sukhwinder Singh Sohal and Gregory M. Woods and Ultan McDermott and Fengtang Yang and Mathew J. Garnett and Zemin Ning and Elizabeth P. Murchison},
+html={https://www.cell.com/cancer-cell/fulltext/S1535-6108(18)30117-X},
+pdf={https://www.cell.com/cancer-cell/pdfExtended/S1535-6108(18)30117-X}
 }
 
 @article{ye2016structural,
@@ -20,7 +22,9 @@ author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dan
   journal={Next Generat Sequenc \& Applic},
   volume={1},
   number={007},
-  year={2016}
+  year={2016},
+  html={https://www.iomcworld.com/abstract/structural-variation-detection-from-next-generation-sequencing-13492.html},
+  pdf={https://www.iomcworld.com/open-access/structural-variation-detection-from-next-generation-sequencing-2469-9853-S1-007.pdf}
 }
 
 @inproceedings{hall2019impact,
@@ -28,7 +32,9 @@ author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dan
   author={Hall, George T and Oliveto, Pietro S and Sudholt, Dirk},
   booktitle={Proceedings of the Genetic and Evolutionary Computation Conference},
   pages={907--915},
-  year={2019}
+  year={2019},
+  html={https://dl.acm.org/doi/10.1145/3321707.3321879},
+  pdf={https://eprints.whiterose.ac.uk/145576/1/whiterose.pdf}
 }
 
 @inproceedings{hall2020analysis,
@@ -36,7 +42,9 @@ author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dan
   author={Hall, George T and Oliveto, Pietro S and Sudholt, Dirk},
   booktitle={Proceedings of the 2020 Genetic and Evolutionary Computation Conference},
   pages={823--831},
-  year={2020}
+  year={2020},
+  html={https://dl.acm.org/doi/abs/10.1145/3377930.3390218},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3377930.3390218?casa_token=ANFX5TGoId4AAAAA:oVwdXYnKN4U6MSPvC5sa-0OdspjzIV_-eUscrmXdsQ3fDJ5XgnW8ewyiS6dREM0rWm84k_TINuUZ}
 }
 
 @inproceedings{hall2020fast,
@@ -45,7 +53,9 @@ author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dan
   booktitle={International Conference on Parallel Problem Solving from Nature},
   pages={19--32},
   year={2020},
-  organization={Springer}
+  organization={Springer},
+  html={https://link.springer.com/chapter/10.1007/978-3-030-58112-1_2},
+  pdf={https://eprints.whiterose.ac.uk/162212/1/fast_perturbative_algorithm_configurators_camera_ready.pdf}
 }
 
 @article{hall2022impact,
@@ -55,14 +65,18 @@ author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dan
   volume={303},
   pages={103629},
   year={2022},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  html={https://doi.org/10.1016/j.artint.2021.103629},
+  pdf={https://eprints.whiterose.ac.uk/181085/1/Tuning_Paper_AIJ_Version.pdf}
 }
 
 @phdthesis{hall2021framework,
   title={A Framework for the Runtime Analysis of Algorithm Configurators},
   author={Hall, George T},
   year={2021},
-  school={University of Sheffield}
+  school={University of Sheffield},
+  html={https://etheses.whiterose.ac.uk/29537/},
+  pdf={https://etheses.whiterose.ac.uk/29537/1/thesis.pdf}
 }
 
 @article{jayarajan2023short,
@@ -73,5 +87,17 @@ author = {Maximilian R. Stammnitz and Tim H.H. Coorens and Kevin C. Gori and Dan
   number={3},
   pages={346},
   year={2023},
-  publisher={MDPI}
+  publisher={MDPI},
+  html={https://doi.org/10.3390/cells12030346},
+  pdf={https://www.mdpi.com/2073-4409/12/3/346/pdf?version=1673949114}
+}
+
+@article{dawnn_biorxiv,
+	author = {Hall, George T and Castellano, Sergi},
+	title = {Dawnn: single-cell differential abundance with neural networks},
+	year = {2023},
+        journal={bioRxiv},
+	doi = {10.1101/2023.05.05.539427},
+	html = {https://www.biorxiv.org/content/early/2023/05/07/2023.05.05.539427},
+	pdf = {https://www.biorxiv.org/content/early/2023/05/07/2023.05.05.539427.full.pdf}
 }
